--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "seed": "node ./db/seeds.sql"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "cli-table3": "^0.6.3",
     "inquirer": "8.2.4",
     "mysql2": "^3.6.5"
   }
